# test-technique-ornikar

./: README.md  gitignore
Question 1/: Makefile  question_a.sql  question_b.py  test_question_b.py
Question 1/python_virtual_environment/: pyproject.toml
