[tool.poetry]
name = "test-technique-ornikar"
version = "1.0.0"
description = "Environment python avec tout le nécessaire pour excuter le code, linter, run les tests..."
authors = ["Ludovic GAYET"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "8.1.3"
pydantic = "1.10.6"
google-cloud-bigquery = "3.7.0"

[tool.poetry.dev-dependencies]
black = ">=20.0.0"
sqlfluff = "2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"